{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 23,
  "lineage": "21986b9f-8db0-8f81-27a1-33408104289b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:network-acl/acl-0e788558d3f7502cc",
            "default_network_acl_id": "acl-0e788558d3f7502cc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e788558d3f7502cc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "471112962162",
            "subnet_ids": [
              "subnet-0038c1e76c199e1bf",
              "subnet-00e58dbf0a4945579",
              "subnet-0193e1e063f16988d",
              "subnet-0235b34da70165cd5",
              "subnet-02794a2d490f50ed2",
              "subnet-0a117d1609542e351"
            ],
            "tags": {
              "Name": "HR-string-v2-vpc-module-default",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-default",
              "environment": "string",
              "owners": "HR"
            },
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:route-table/rtb-07cb7f2f14821a644",
            "default_route_table_id": "rtb-07cb7f2f14821a644",
            "id": "rtb-07cb7f2f14821a644",
            "owner_id": "471112962162",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "HR-string-v2-vpc-module-default",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-default",
              "environment": "string",
              "owners": "HR"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:security-group/sg-039c692495f7245e1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-039c692495f7245e1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "471112962162",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HR-string-v2-vpc-module-default",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-default",
              "environment": "string",
              "owners": "HR"
            },
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9c1ab9e448a54e8",
            "arn": "arn:aws:ec2:us-east-1:471112962162:elastic-ip/eipalloc-0e9c1ab9e448a54e8",
            "domain": "vpc",
            "id": "eipalloc-0e9c1ab9e448a54e8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-205-101-72.compute-1.amazonaws.com",
            "public_ip": "44.205.101.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "HR-string-v2-vpc-module-us-east-1a",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-us-east-1a",
              "environment": "string",
              "owners": "HR"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:internet-gateway/igw-01230b5924c742bab",
            "id": "igw-01230b5924c742bab",
            "owner_id": "471112962162",
            "tags": {
              "Name": "HR-string-v2-vpc-module",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module",
              "environment": "string",
              "owners": "HR"
            },
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01230b5924c742bab",
            "id": "r-rtb-0da1095665ff3bfd31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da1095665ff3bfd3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:route-table/rtb-0b3a065b7449003e0",
            "id": "rtb-0b3a065b7449003e0",
            "owner_id": "471112962162",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-string-v2-vpc-module-db",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-db",
              "environment": "string",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:route-table/rtb-0ba031cbbe9b374ac",
            "id": "rtb-0ba031cbbe9b374ac",
            "owner_id": "471112962162",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-string-v2-vpc-module-private",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-private",
              "environment": "string",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:route-table/rtb-0da1095665ff3bfd3",
            "id": "rtb-0da1095665ff3bfd3",
            "owner_id": "471112962162",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-string-v2-vpc-module-public",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-public",
              "environment": "string",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd2f28731d2a24be",
            "route_table_id": "rtb-0b3a065b7449003e0",
            "subnet_id": "subnet-00e58dbf0a4945579"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189fe31ddec7296d",
            "route_table_id": "rtb-0b3a065b7449003e0",
            "subnet_id": "subnet-0235b34da70165cd5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027d7ee01cc8bec02",
            "route_table_id": "rtb-0ba031cbbe9b374ac",
            "subnet_id": "subnet-0a117d1609542e351"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04822068d8c000e94",
            "route_table_id": "rtb-0ba031cbbe9b374ac",
            "subnet_id": "subnet-0193e1e063f16988d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caa14caf8ee4f2d6",
            "route_table_id": "rtb-0da1095665ff3bfd3",
            "subnet_id": "subnet-02794a2d490f50ed2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b07d6fc7137beeb0",
            "route_table_id": "rtb-0da1095665ff3bfd3",
            "subnet_id": "subnet-0038c1e76c199e1bf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:subnet/subnet-00e58dbf0a4945579",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e58dbf0a4945579",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112962162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-string-v2-vpc-module-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "string",
              "owners": "HR"
            },
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:subnet/subnet-0235b34da70165cd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0235b34da70165cd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112962162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-string-v2-vpc-module-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "string",
              "owners": "HR"
            },
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:subnet/subnet-0a117d1609542e351",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a117d1609542e351",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112962162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-string-v2-vpc-module-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "string",
              "owners": "HR"
            },
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:subnet/subnet-0193e1e063f16988d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0193e1e063f16988d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112962162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-string-v2-vpc-module-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "string",
              "owners": "HR"
            },
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:subnet/subnet-02794a2d490f50ed2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02794a2d490f50ed2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112962162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-string-v2-vpc-module-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "string",
              "owners": "HR"
            },
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:subnet/subnet-0038c1e76c199e1bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0038c1e76c199e1bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112962162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-string-v2-vpc-module-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "string",
              "owners": "HR"
            },
            "vpc_id": "vpc-0342d11bfa226b243"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112962162:vpc/vpc-0342d11bfa226b243",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e788558d3f7502cc",
            "default_route_table_id": "rtb-07cb7f2f14821a644",
            "default_security_group_id": "sg-039c692495f7245e1",
            "dhcp_options_id": "dopt-04c4f166788b3cc7d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0342d11bfa226b243",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07cb7f2f14821a644",
            "owner_id": "471112962162",
            "tags": {
              "Name": "HR-string-v2-vpc-module",
              "environment": "string",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-string-v2-vpc-module",
              "environment": "string",
              "owners": "HR"
            }
          }
        }
      ]
    }
  ]
}